crates/ars-components/src/data_display/snapshots/ars_components__data_display__stat__tests__stat_change_down.snap
---
source: crates/ars-components/src/data_display/stat.rs
expression: "snapshot_attrs(&api(Props::new().id(\"stat\").change(-3.2)).change_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "change",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "stat",
            ),
        ),
        (
            Data(
                "ars-trend",
            ),
            String(
                "down",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "3.2% decrease",
            ),
        ),
    ],
    styles: [],
}
