crates/ars-components/src/data_display/snapshots/ars_components__data_display__stat__tests__stat_help_text.snap
---
source: crates/ars-components/src/data_display/stat.rs
expression: snapshot_attrs(&api.help_text_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "help-text",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "stat",
            ),
        ),
    ],
    styles: [],
}
