crates/ars-components/src/data_display/snapshots/ars_components__data_display__stat__tests__stat_label.snap
---
source: crates/ars-components/src/data_display/stat.rs
expression: snapshot_attrs(&api.label_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "stat",
            ),
        ),
    ],
    styles: [],
}
