crates/ars-components/src/data_display/snapshots/ars_components__data_display__stat__tests__stat_trend_indicator.snap
---
source: crates/ars-components/src/data_display/stat.rs
expression: "snapshot_attrs(&api(Props::new().id(\"stat\").change(12.5)).trend_indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "trend-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "stat",
            ),
        ),
        (
            Data(
                "ars-trend",
            ),
            String(
                "up",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
