crates/ars-components/src/data_display/snapshots/ars_components__data_display__stat__tests__stat_value.snap
---
source: crates/ars-components/src/data_display/stat.rs
expression: snapshot_attrs(&api.value_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "value",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "stat",
            ),
        ),
    ],
    styles: [],
}
